# Kobra

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  output.ppm
src/: cobra.h  main.cpp
src/camera/: camera.cpp  camera.h
src/core/: aabb.h  bvh_node.h  constants.h  dieletric.h  hit_record.h  interval.h  lambertian.h  light.h  material.h  metal.h  onb.h  pdf.h  ray.cpp  ray.h  texture.h  vec3.cpp  vec3.h
src/geometry/: hittable.cpp  hittable.h  quad.h  sphere.cpp  sphere.h
src/image/: image.cpp  image.h  image_writer.cpp  image_writer.h  ppm_writer.cpp  ppm_writer.h
src/math/: constants.h  hit_record.h  ray.cpp  ray.h  vec3.cpp  vec3.h
src/renderer/: raytracer.cpp  raytracer.h
src/scene/: scene.cpp  scene.h
